# stop_save_pChurn

./: .gitignore  README.md  main.py  prepare-data.skill  pyproject.toml
.agent/: pipeline_history.jsonl
.agent/skills/prepare-data/: SKILL.md
src/: data_assessment.py  data_processing.py  eda_helpers.py  eda_helpers_v2.py  run_pipeline.py
src/notebooks/: EDA.ipynb  EDA_complete.ipynb  EDA_v2.ipynb  sankey.ipynb  sankey_interactive.html
src/notebooks/tables/eda_complete/: behavior_profiles.csv  distribution_summary.csv  likely_discount_shopper_behavior_summary.csv  population_counts.csv  primary_behavior_reference.csv  primary_segment_summaries.csv  saved_minus_stopped_contrasts.csv  selected_segment_details.csv  selected_segment_treatment_contrasts.csv
src/notebooks/tables/eda_complete_v2/: behavior_profiles.csv  distribution_summary.csv  likely_discount_shopper_behavior_summary.csv  population_counts.csv  primary_behavior_reference.csv  primary_segment_summaries.csv  saved_minus_stopped_contrasts.csv  selected_segment_details.csv  selected_segment_treatment_contrasts.csv
src/sql/: add_rate.sql  discount_shopper.sql  guardrail.sql  monitor_performance.sql  monitor_performance_part1.sql  monitor_performance_part2.sql  raw_online_cancel.sql  stop_save_source.sql
tests/: test_eda_helpers.py  test_eda_helpers_v2.py
