[project]
name = "stop-save-pchurn"
version = "0.1.0"
description = "Exploratory analysis and modeling utilities for stop/save churn experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-dtypes>=1.5.1",
    "google-cloud-bigquery>=3.41.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
